--- a/app/src/main/res/layout/dashboard_layout.xml
+++ b/app/src/main/res/layout/dashboard_layout.xml
@@ -5,6 +5,7 @@
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:background="@drawable/dashboard_bg"
+    android:id="@+id/dashboard"
     tools:context=".activities.HomeActivity">
     <com.google.android.material.appbar.AppBarLayout
         android:layout_width="match_parent"
@@ -22,12 +23,13 @@
             app:collapsedTitleTextAppearance="@style/dashboardStyle"
             app:expandedTitleTextAppearance="@style/dashboardStyle"
             android:background="@drawable/dashboard_bg">
+
             <de.hdodenhof.circleimageview.CircleImageView
                 android:layout_width="300dp"
                 android:layout_height="200dp"
                 android:layout_marginBottom="30dp"
                 android:scaleType="centerCrop"
-                android:layout_marginRight="20dp"
+                android:layout_marginEnd="20dp"
                 android:src="@drawable/dashboard_icon"
                 android:layout_gravity="center|end"
                 app:layout_collapseMode="parallax"
@@ -63,17 +65,18 @@
                     app:cardCornerRadius="40dp"
                     >
                     <LinearLayout
-                        android:id="@+id/taranimCardView"
+                        android:id="@+id/taranem_card_view"
                         android:clickable="true"
                         android:layout_width="match_parent"
                         android:layout_height="match_parent"
                         android:gravity="center"
                         android:orientation="vertical"
-                        >
+                        android:focusable="true">
                         <ImageView
                             android:layout_width="45dp"
                             android:layout_height="45dp"
-                            android:src="@drawable/book_icon"/>
+                            android:src="@drawable/book_icon"
+                            android:contentDescription="@string/image_hymens" />
                         <TextView
                             android:layout_width="wrap_content"
                             android:layout_height="wrap_content"
@@ -99,6 +102,7 @@
                     android:layout_height="190dp"
                     android:layout_margin="13dp"
                     app:cardCornerRadius="40dp">
+
                     <LinearLayout
                         android:id="@+id/bookAodasCardView"
                         android:foreground="?android:attr/selectableItemBackground"
@@ -107,29 +111,34 @@
                         android:layout_height="match_parent"
                         android:gravity="center"
                         android:orientation="vertical"
-                        >
+                        tools:targetApi="m">
+
                         <ImageView
                             android:layout_width="45dp"
                             android:layout_height="45dp"
                             android:src="@drawable/church_icon"/>
+
                         <TextView
                             android:layout_width="wrap_content"
                             android:layout_height="wrap_content"
                             android:layout_marginTop="10dp"
                             android:textStyle="bold"
                             android:text="@string/booking_aodas"/>
+
                         <View
                             android:layout_width="match_parent"
                             android:layout_height="1dp"
                             android:background="@color/gray"
                             android:layout_margin="10dp"/>
+
                         <TextView
                             android:layout_width="wrap_content"
                             android:layout_height="wrap_content"
                             android:gravity="center"
-                            android:text="@string/booking_aodas_describe"
+                            android:text="@string/booking_pray_describe"
                             android:padding="12dp"
                             android:textColor="@android:color/darker_gray"/>
+
                     </LinearLayout>
                 </androidx.cardview.widget.CardView>
             </LinearLayout>
@@ -154,15 +163,15 @@
                         android:orientation="vertical"
                         >
                         <ImageView
-                            android:layout_width="45dp"
-                            android:layout_height="45dp"
+                            android:layout_width="70dp"
+                            android:layout_height="70dp"
                             android:src="@drawable/follow_icon"/>
                         <TextView
                             android:layout_width="wrap_content"
                             android:layout_height="wrap_content"
                             android:layout_marginTop="10dp"
                             android:textStyle="bold"
-                            android:text="@string/followResevation"/>
+                            android:text="@string/follow_reservation"/>
                         <View
                             android:layout_width="match_parent"
                             android:layout_height="1dp"
@@ -172,57 +181,11 @@
                             android:layout_width="wrap_content"
                             android:layout_height="wrap_content"
                             android:gravity="center"
-                            android:text="@string/followResevation_desc"
+                            android:text="@string/follow_reservation_desc"
                             android:padding="12dp"
                             android:textColor="@android:color/darker_gray"/>
                     </LinearLayout>
                 </androidx.cardview.widget.CardView>
-                <androidx.cardview.widget.CardView
-                    android:layout_width="160dp"
-                    android:layout_height="190dp"
-                    android:layout_margin="13dp"
-                    app:cardCornerRadius="40dp">
-                    <LinearLayout
-                        android:id="@+id/aya_card"
-                        android:foreground="?android:attr/selectableItemBackground"
-                        android:clickable="true"
-                        android:layout_width="match_parent"
-                        android:layout_height="match_parent"
-                        android:gravity="center"
-                        android:orientation="vertical"
-                        >
-                        <ImageView
-                            android:layout_width="45dp"
-                            android:layout_height="45dp"
-                            android:src="@drawable/aya"/>
-                        <TextView
-                            android:layout_width="wrap_content"
-                            android:layout_height="wrap_content"
-                            android:layout_marginTop="10dp"
-                            android:textStyle="bold"
-                            android:text="@string/aya"/>
-                        <View
-                            android:layout_width="match_parent"
-                            android:layout_height="1dp"
-                            android:background="@color/gray"
-                            android:layout_margin="10dp"/>
-                        <TextView
-                            android:layout_width="wrap_content"
-                            android:layout_height="wrap_content"
-                            android:gravity="center"
-                            android:text="@string/aya_desc"
-                            android:padding="12dp"
-                            android:textColor="@android:color/darker_gray"/>
-                    </LinearLayout>
-                </androidx.cardview.widget.CardView>
-            </LinearLayout>
-            >
-            <LinearLayout
-                android:layout_width="match_parent"
-                android:orientation="horizontal"
-                android:gravity="center"
-                android:clipToPadding="false"
-                android:layout_height="wrap_content">
                 <androidx.cardview.widget.CardView
                     android:layout_width="160dp"
                     android:layout_height="190dp"
@@ -264,10 +227,5 @@
                 </androidx.cardview.widget.CardView>
             </LinearLayout>
         </LinearLayout>
-
-
-
-
-
     </androidx.core.widget.NestedScrollView>
 </androidx.coordinatorlayout.widget.CoordinatorLayout>
