--- a/app/src/main/res/values/themes.xml
+++ b/app/src/main/res/values/themes.xml
@@ -57,15 +57,12 @@
         <item name="android:gravity">center_horizontal</item>
     </style>
 
-    <style name="dashboardStyle" parent="Theme.MaterialComponents.DayNight.NoActionBar">
-        <item name="colorPrimary">@color/purple_500</item>
-        <item name="colorPrimaryVariant">@color/purple_700</item>
-        <item name="colorOnPrimary">#4E1313</item>
-        <item name="colorSecondary">@color/teal_200</item>
-        <item name="colorSecondaryVariant">@color/teal_700</item>
-        <item name="colorOnSecondary">#4E1313</item>
-        <item name="android:statusBarColor" tools:targetApi="lollipop">@color/black</item>
+    <style name="dashboardStyle" parent="Theme.MaterialComponents.Light.NoActionBar">
+        <item name="colorPrimary">@color/purple_200</item>
+        <item name="colorPrimaryDark">@color/purple_200</item>
+        <item name="colorAccent">@color/purple_200</item>
         <item name="android:textColor">@color/white</item>
+        <item name="android:statusBarColor" tools:targetApi="lollipop">@color/purple_200</item>
     </style>
     <style name="FollowReservation" parent="Theme.AppCompat.Light.DarkActionBar">
         <!-- Customize your theme here. -->
